# eplace

./: .gitignore  .readthedocs.yaml  INSTALL.md  LICENSE  README.md  citation.cff  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: blast_workflow.md
docs/source/: alignment.rst  api.rst  cli.rst  cli_old.md  conf.py  contributing.rst  index.rst  installation.rst  license.rst  ncbi_download.md  phylogenetic_trees.rst  quickstart.rst  workflows.rst
examples/: blast_workflow_example.py  download_ncbi_example.py  grouped_workflow_example.py  relabel_example.py
slurm/: blast_dna.slurm  eplace.slurm  eplace_groups.slurm  eplacer.slurm
src/eplace_lib/: __init__.py  alignment.py  blast_analysis.py  cli.py  ncbi_download.py  sequences.py  taxonomy.py
tests/: __init__.py  test_alignment.py  test_blast_analysis.py  test_cli.py  test_ncbi_download.py  test_relabel_command.py  test_taxonomy.py  test_workflow.py
