[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eplace"
version = "0.1.4"
description = "ePLACE: environmental Phylogenetic Localisation and Clade Estimation - A library for analyzing eDNA sequences"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rob Edwards", email = "raedwards@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
eplace = "eplace_lib.cli:main"

[project.urls]
Homepage = "https://github.com/linsalrob/eplace"
Repository = "https://github.com/linsalrob/eplace"
Issues = "https://github.com/linsalrob/eplace/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eplace_lib = ["*.txt", "*.md"]
